--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.10.3",
+    "@mui/lab": "5.0.0-alpha.129",
     "@mui/material": "^5.12.1",
     "@mui/system": "^5.4.1",
     "@mui/x-data-grid": "^5.17.2",
@@ -19,6 +20,7 @@
     "axios": "^1.3.6",
     "firebase": "^9.20.0",
     "formik": "^2.2.9",
+    "material-ui-popup-state": "^5.0.8",
     "mui": "^0.0.1",
     "pg": "^8.10.0",
     "react": "^18.2.0",
