--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.12.1",
     "@mui/system": "^5.4.1",
     "@mui/x-data-grid": "^5.17.2",
+    "@mui/x-data-grid-pro": "^6.3.1",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.3.6",
     "firebase": "^9.20.0",
