--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@netlify/functions": "^2.3.0",
     "axios": "^1.3.3",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
@@ -20,7 +21,8 @@
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "morgan": "^1.10.0",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
