--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,8 @@
     "moment-timezone": "^0.5.43",
     "morgan": "^1.10.0",
     "openai": "^3.2.1",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "pg":"latest"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
