--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@mui/x-data-grid-pro": "^6.3.1",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.3.6",
+    "currency.js": "^2.0.4",
     "firebase": "^9.20.0",
     "formik": "^2.2.9",
     "material-ui-popup-state": "^5.0.8",
