--- a/server/package.json
+++ b/server/package.json
@@ -8,13 +8,15 @@
     "node": "18.x"
   },
   "scripts": {
-    "dev":"nodemon index.js",
+    "dev": "nodemon index.js",
     "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emailjs/nodejs": "^2.2.0",
+    "@google/generative-ai": "^0.2.1",
     "@netlify/functions": "^2.3.0",
     "axios": "^1.3.3",
     "body-parser": "^1.20.1",
@@ -27,8 +29,8 @@
     "moment-timezone": "^0.5.43",
     "morgan": "^1.10.0",
     "openai": "^3.2.1",
-    "serverless-http": "^3.2.0",
-    "pg":"latest"
+    "pg": "latest",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
