--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
   "license": "ISC",
   "dependencies": {
     "@emailjs/nodejs": "^2.2.0",
+    "@google-ai/generativelanguage": "^2.6.0",
+    "@google-cloud/vertexai": "^1.4.0",
     "@google/generative-ai": "^0.2.1",
     "@netlify/functions": "^2.3.0",
     "axios": "^1.3.3",
