--- a/server/package.json
+++ b/server/package.json
@@ -32,7 +32,8 @@
     "morgan": "^1.10.0",
     "openai": "^3.2.1",
     "pg": "latest",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
