--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.10.3",
-    "@mui/lab": "5.0.0-alpha.129",
+    "@mui/lab": "^5.0.0-alpha.129",
     "@mui/material": "^5.12.1",
     "@mui/system": "^5.4.1",
     "@mui/x-data-grid": "^5.17.2",
