--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "material-ui-popup-state": "^5.0.8",
     "mui": "^0.0.1",
     "pg": "^8.10.0",
+    "pnpm": "^9.7.1",
     "react": "^18.2.0",
     "react-data-grid": "^7.0.0-beta.28",
     "react-dom": "^18.2.0",
