--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "start": "vite start --host",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -21,7 +22,6 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.3.6",
     "currency.js": "^2.0.4",
-    "firebase": "^9.20.0",
     "formik": "^2.2.9",
     "material-ui-popup-state": "^5.0.8",
     "mui": "^0.0.1",
