--- a/server/package.json
+++ b/server/package.json
@@ -21,12 +21,14 @@
     "@google/generative-ai": "^0.2.1",
     "@netlify/functions": "^2.3.0",
     "axios": "^1.3.3",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs": "0.0.1-security",
     "helmet": "^6.0.1",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "morgan": "^1.10.0",
