--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "currency.js": "^2.0.4",
     "formik": "^2.2.9",
     "material-ui-popup-state": "^5.0.8",
+    "moment": "^2.30.1",
     "mui": "^0.0.1",
     "pg": "^8.10.0",
     "pnpm": "^9.7.1",
