--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.3.6",
     "currency.js": "^2.0.4",
+    "date-fns": "^3.6.0",
     "formik": "^2.2.9",
     "material-ui-popup-state": "^5.0.8",
     "moment": "^2.30.1",
