--- a/server/package.json
+++ b/server/package.json
@@ -35,7 +35,8 @@
     "openai": "^3.2.1",
     "pg": "latest",
     "serverless-http": "^3.2.0",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "telegraf": "^4.16.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
