--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "react-router-dom": "^6.10.0",
     "redux": "^4.2.1",
     "scss": "^0.2.4",
+    "sjcl": "^1.0.8",
     "yup": "^1.1.1"
   },
   "devDependencies": {
