--- a/client/package.json
+++ b/client/package.json
@@ -33,11 +33,13 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-data-grid": "^7.0.0-beta.28",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-pro-sidebar": "^0.7.1",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "redux": "^4.2.1",
+    "remark-gfm": "^4.0.0",
     "scss": "^0.2.4",
     "sjcl": "^1.0.8",
     "yup": "^1.1.1"
