--- a/server/package.json
+++ b/server/package.json
@@ -36,7 +36,8 @@
     "pg": "latest",
     "serverless-http": "^3.2.0",
     "sqlite3": "^5.1.7",
-    "telegraf": "^4.16.3"
+    "telegraf": "^4.16.3",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
