--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "currency.js": "^2.0.4",
     "date-fns": "^3.6.0",
     "formik": "^2.2.9",
+    "lottie-react": "^2.4.0",
     "material-ui-popup-state": "^5.0.8",
     "moment": "^2.30.1",
     "mui": "^0.0.1",
