--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "babel-plugin-react-compiler": "^0.0.0-experimental-7449567-20240905",
     "next": "^15.0.0-canary.146",
+    "next-auth": "^4.24.7",
     "react": "^19.0.0-rc-fb9a90fa48-20240614",
     "react-dom": "^19.0.0-rc-fb9a90fa48-20240614"
   },
