--- a/nextjs/.env
+++ b/nextjs/.env
@@ -1,1 +1,15 @@
 NEXT_APIURL=https://tinynotie-api.vercel.app/
+
+DATABASE_URL="postgres://default:zDvZUGwILq20@ep-twilight-truth-45489910-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require"
+
+POSTGRES_URL="postgres://default:zDvZUGwILq20@ep-twilight-truth-45489910-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:zDvZUGwILq20@ep-twilight-truth-45489910-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://default:zDvZUGwILq20@ep-twilight-truth-45489910-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:zDvZUGwILq20@ep-twilight-truth-45489910.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require"
+
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-twilight-truth-45489910-pooler.ap-southeast-1.aws.neon.tech"
+POSTGRES_PASSWORD="zDvZUGwILq20"
+POSTGRES_DATABASE="verceldb"
+
+NODE_TLS_REJECT_UNAUTHORIZED=0
