--- a/nextjs/.env
+++ b/nextjs/.env
@@ -1,5 +1,3 @@
-NEXT_APIURL=https://tinynotie-api.vercel.app/
-
 DATABASE_URL="postgres://default:zDvZUGwILq20@ep-twilight-truth-45489910-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require"
 
 POSTGRES_URL="postgres://default:zDvZUGwILq20@ep-twilight-truth-45489910-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require"
@@ -13,3 +11,8 @@ POSTGRES_PASSWORD="zDvZUGwILq20"
 POSTGRES_DATABASE="verceldb"
 
 NODE_TLS_REJECT_UNAUTHORIZED=0
+
+NEXT_APIURL=https://tinynotie-api.vercel.app
+
+NEXTAUTH_SECRET=ttqxUw4YvFE5mS8AFctPECviZDOf0WBEgdlcLeD87Yw=
+NEXTAUTH_URL=http://localhost:3000
