--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -51,6 +51,7 @@
     "framer-motion": "^11.5.4",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.439.0",
+    "moment": "^2.30.1",
     "next": "^15.0.0-canary.146",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
