--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -42,19 +42,23 @@
     "@vercel/postgres": "^0.10.0",
     "axios": "^1.7.7",
     "babel-plugin-react-compiler": "^0.0.0-experimental-7449567-20240905",
+    "base64url": "^3.0.1",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "currency.js": "^2.0.4",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.2.1",
     "framer-motion": "^11.5.4",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.439.0",
+    "lz-string": "^1.5.0",
     "moment": "^2.30.1",
     "next": "^15.0.0-canary.146",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "pako": "^2.1.0",
     "pg": "^8.12.0",
     "react": "^19.0.0-rc-fb9a90fa48-20240614",
     "react-day-picker": "8.10.1",
