--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@headlessui/react": "^2.1.8",
+    "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
+    "@mui/material": "^6.1.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -39,6 +44,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-query": "^5.55.4",
     "@tanstack/react-query-devtools": "^5.55.4",
+    "@tanstack/react-table": "^8.20.5",
     "@vercel/postgres": "^0.10.0",
     "axios": "^1.7.7",
     "babel-plugin-react-compiler": "^0.0.0-experimental-7449567-20240905",
@@ -65,6 +71,7 @@
     "react-dom": "^19.0.0-rc-fb9a90fa48-20240614",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.2",
+    "react-select": "^5.8.1",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
