--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,13 @@
     "@clerk/clerk-react": "^4.16.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@million/lint": "^1.0.0-rc.84",
     "@mui/icons-material": "^5.10.3",
     "@mui/lab": "^5.0.0-alpha.129",
     "@mui/material": "^5.12.1",
     "@mui/system": "^5.4.1",
     "@mui/x-data-grid": "^5.17.2",
+    "@mui/x-data-grid-generator": "^7.18.0",
     "@mui/x-data-grid-pro": "^6.3.1",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.3.6",
@@ -43,6 +45,7 @@
     "remark-gfm": "^4.0.0",
     "scss": "^0.2.4",
     "sjcl": "^1.0.8",
+    "tesseract.js": "^5.1.1",
     "yup": "^1.1.1"
   },
   "devDependencies": {
