--- a/nextjs/.eslintrc.json
+++ b/nextjs/.eslintrc.json
@@ -5,6 +5,7 @@
   ],
   "rules": {
     "@typescript-eslint/no-explicit-any": "off", // Turn off the rule globally
-    "@typescript-eslint/no-unused-vars": "off"
+    "@typescript-eslint/no-unused-vars": "off",
+    "prefer-const": "off"
   }
 }
