--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
 VITE_BASE_URL=https://tinynotie-api.vercel.app/
+BLOB_READ_WRITE_TOKEN="vercel_blob_rw_59gZF76QCxun73f0_J3hTEcRWxYK0e9cjjMFZL9XoLNpHlY"
