--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "@google-cloud/vertexai": "^1.4.0",
     "@google/generative-ai": "^0.2.1",
     "@netlify/functions": "^2.3.0",
+    "@vercel/blob": "^0.27.3",
     "axios": "^1.3.3",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.1",
