--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "openai": "^3.2.1",
     "pg": "latest",
     "rate-limit-redis": "^4.2.0",
