--- a/client/package.json
+++ b/client/package.json
@@ -23,11 +23,13 @@
     "@mui/x-data-grid-pro": "^6.3.1",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.3.6",
+    "browser-image-compression": "^1.0.17",
     "currency.js": "^2.0.4",
     "date-fns": "^3.6.0",
     "formik": "^2.2.9",
     "lottie-react": "^2.4.0",
     "material-ui-popup-state": "^5.0.8",
+    "mdast-util-to-markdown": "^2.1.2",
     "moment": "^2.30.1",
     "mui": "^0.0.1",
     "pg": "^8.10.0",
@@ -42,12 +44,12 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "redux": "^4.2.1",
-    "remark-gfm": "^4.0.0",
+    "remark-gfm": "^4.0.1",
     "scss": "^0.2.4",
     "sjcl": "^1.0.8",
     "tesseract.js": "^5.1.1",
     "yup": "^1.1.1",
-    "browser-image-compression": "^1.0.17"
+    "zwitch": "^2.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
