--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-data-grid": "^7.0.0-beta.28",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.4.1",
     "react-markdown": "^9.0.1",
     "react-pro-sidebar": "^0.7.1",
     "react-query": "^3.39.3",
