--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "mdast-util-to-markdown": "^2.1.2",
     "moment": "^2.30.1",
     "mui": "^0.0.1",
+    "note": "file:",
     "pg": "^8.10.0",
     "pnpm": "^9.7.1",
     "react": "^18.2.0",
