--- a/client/package.json
+++ b/client/package.json
@@ -7,20 +7,21 @@
     "dev": "vite",
     "build": "vite build",
     "start": "vite start --host",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "clean-install": "node clean-install.cjs"
   },
   "dependencies": {
     "@clerk/clerk-react": "^4.16.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@million/lint": "^1.0.0-rc.84",
-    "@mui/icons-material": "^5.10.3",
-    "@mui/lab": "^5.0.0-alpha.129",
-    "@mui/material": "^5.12.1",
-    "@mui/system": "^5.4.1",
-    "@mui/x-data-grid": "^5.17.2",
-    "@mui/x-data-grid-generator": "^7.18.0",
-    "@mui/x-data-grid-pro": "^6.3.1",
+    "@mui/icons-material": "^5.15.0",
+    "@mui/lab": "^5.0.0-alpha.150",
+    "@mui/material": "^5.15.0",
+    "@mui/system": "^5.15.0",
+    "@mui/x-data-grid": "^5.17.26",
+    "@mui/x-data-grid-generator": "^5.17.26",
+    "@mui/x-data-grid-pro": "^5.17.26",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.3.6",
     "browser-image-compression": "^1.0.17",
