feat: Add clean-install script, update package.json scripts, and configure Vercel settings

--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,9 @@
   },
   "scripts": {
     "dev": "nodemon index.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "vercel-build": "echo 'Building for Vercel deployment' && node -e \"console.log('Node version:', process.version)\"",
+    "clean-install": "node clean-install.cjs"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +21,6 @@
     "@google-ai/generativelanguage": "^2.6.0",
     "@google-cloud/vertexai": "^1.4.0",
     "@google/generative-ai": "^0.2.1",
-    "@netlify/functions": "^2.3.0",
     "@vercel/blob": "^0.27.3",
     "axios": "^1.3.3",
     "bcrypt": "^5.1.1",
@@ -34,13 +35,8 @@
     "moment-timezone": "^0.5.43",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "note": "file:",
     "openai": "^3.2.1",
-    "pg": "latest",
-    "rate-limit-redis": "^4.2.0",
-    "redis": "^4.7.0",
-    "serverless-http": "^3.2.0",
-    "sqlite3": "^5.1.7",
+    "pg": "^8.11.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "telegraf": "^4.16.3",
@@ -48,5 +44,8 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
+  },
+  "resolutions": {
+    "string-width": "^4.0.0"
   }
 }
