--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "moment-timezone": "^0.5.43",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "note": "file:",
     "openai": "^3.2.1",
     "pg": "^8.11.3",
     "swagger-jsdoc": "^6.2.8",
