--- a/client/.npmrc
+++ b/client/.npmrc
@@ -1,4 +1,5 @@
-network-timeout=100000
-fetch-retries=3
+network-timeout=600000
+fetch-retries=5
 fetch-retry-mintimeout=20000
 fetch-retry-maxtimeout=120000
+registry=https://registry.npmjs.org/
