--- a/client/vercel.json
+++ b/client/vercel.json
@@ -6,7 +6,8 @@
             "use": "@vercel/static-build",
             "config": {
                 "distDir": "dist",
-                "installCommand": "npm run clean-install"
+                "installCommand": "yarn install --network-timeout 600000",
+                "buildCommand": "yarn build"
             }
         }
     ],
