--- a/client/package.json
+++ b/client/package.json
@@ -12,16 +12,16 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^4.16.1",
-    "@emotion/react": "11.11.3",
-    "@emotion/styled": "11.11.3",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@million/lint": "^1.0.0-rc.84",
-    "@mui/icons-material": "5.15.14",
-    "@mui/lab": "5.0.0-alpha.159",
-    "@mui/material": "5.15.14",
-    "@mui/system": "5.15.14",
-    "@mui/x-data-grid": "5.17.26",
-    "@mui/x-data-grid-generator": "5.17.26",
-    "@mui/x-data-grid-pro": "5.17.26",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/lab": "^5.0.0-alpha.153",
+    "@mui/material": "^5.14.19",
+    "@mui/system": "^5.14.19",
+    "@mui/x-data-grid": "^5.17.26",
+    "@mui/x-data-grid-generator": "^5.17.26",
+    "@mui/x-data-grid-pro": "^5.17.26",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.3.6",
     "browser-image-compression": "^1.0.17",
