--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "1.5.1",
     "fs": "0.0.1-security",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.2",
